' Generated by UML Generator
' Encoded: dLPDJyCm3BttL-J8D3PndW21u8A4facJa3XcgTL6j4cLkC06xBUJjbkRBabNk3L-zlFpnwpTQQGAopoBz1iN1LKq9ooZMjyZAhuf4PwO56k-0t8LfJm6mhXY6KHHxKKUKive8jUupU0X1T2muhiT9LyH8TC0U34nu9wLU35Pa7V9u-ZdIFS81OWO1DQEQvGA6YgcWE8XN5Ty2x8s0aLoIN1Rj2z3MFjqZClNElqAYWAK5DoIvuMCE2lsHCRUbi4HyhDvdPwuTZlZeMF_Jskt_0MIX8VcOO43yxXNYHa65zHVJ10UG_d_8ljfdJA3yFX2Cvg7opo20tHsftsh5yO7I8-hqnTtQlMiao_C2vrFxZJRjJS2w4QZeWoRQqAwYBsWUVjxhTwnB9FKDcXQifu7og8mdtfXngJezfbhl6xGMt9317ouzhgIsQoABXIOkmPjISQqeM-zjrrn1SjFwpbD09T6SsLgDKrHDj-MDL3rNrRS44iLWsfSXYzRVojzMpRauHrrw9hFPj-tX_I-2psV7r7_jRN2UoUrizVlFkYG1WIv9_EKrlNek4FtqaeGle4-fm4TFfzEIVYeXRMqFsct7sVdC8x1w-2v1HOwehgmhZkpNERVo2y
' URL: http://www.plantuml.com/plantuml/uml/dLPDJyCm3BttL-J8D3PndW21u8A4facJa3XcgTL6j4cLkC06xBUJjbkRBabNk3L-zlFpnwpTQQGAopoBz1iN1LKq9ooZMjyZAhuf4PwO56k-0t8LfJm6mhXY6KHHxKKUKive8jUupU0X1T2muhiT9LyH8TC0U34nu9wLU35Pa7V9u-ZdIFS81OWO1DQEQvGA6YgcWE8XN5Ty2x8s0aLoIN1Rj2z3MFjqZClNElqAYWAK5DoIvuMCE2lsHCRUbi4HyhDvdPwuTZlZeMF_Jskt_0MIX8VcOO43yxXNYHa65zHVJ10UG_d_8ljfdJA3yFX2Cvg7opo20tHsftsh5yO7I8-hqnTtQlMiao_C2vrFxZJRjJS2w4QZeWoRQqAwYBsWUVjxhTwnB9FKDcXQifu7og8mdtfXngJezfbhl6xGMt9317ouzhgIsQoABXIOkmPjISQqeM-zjrrn1SjFwpbD09T6SsLgDKrHDj-MDL3rNrRS44iLWsfSXYzRVojzMpRauHrrw9hFPj-tX_I-2psV7r7_jRN2UoUrizVlFkYG1WIv9_EKrlNek4FtqaeGle4-fm4TFfzEIVYeXRMqFsct7sVdC8x1w-2v1HOwehgmhZkpNERVo2y
' Generated on: 2025-10-07T15:29:56.723113450

@startuml
skinparam classAttributeIconSize 0
hide circle

class ChicagoStyleCheesePizza {
  +ChicagoStyleCheesePizza()
  ~cut(): void
}

class DependentPizzaStore {
  +createPizza(style: String, type: String): Pizza
}

class NYStylePepperoniPizza {
  +NYStylePepperoniPizza()
}

class NYPizzaStore {
  ~createPizza(item: String): Pizza
}

class NYStyleCheesePizza {
  +NYStyleCheesePizza()
}

class ChicagoPizzaStore {
  ~createPizza(item: String): Pizza
}

class ChicagoStyleVeggiePizza {
  +ChicagoStyleVeggiePizza()
  ~cut(): void
}

class ArgentinaStyleCheesePizza {
  +ArgentinaStyleCheesePizza()
  ~cut(): void
}

class ArgentinaPizzaStore {
  ~createPizza(item: String): Pizza
}

class ArgentinaStyleVeggiePizza {
  +ArgentinaStyleVeggiePizza()
  ~cut(): void
}

class ArgentinaStyleClamPizza {
  +ArgentinaStyleClamPizza()
  ~cut(): void
}

class ChicagoStylePepperoniPizza {
  +ChicagoStylePepperoniPizza()
  ~cut(): void
}

class NYStyleClamPizza {
  +NYStyleClamPizza()
}

class ChicagoStyleClamPizza {
  +ChicagoStyleClamPizza()
  ~cut(): void
}

class NYStyleVeggiePizza {
  +NYStyleVeggiePizza()
}

abstract class Pizza {
  ~name: String
  ~dough: String
  ~sauce: String
  ~toppings: ArrayList<String> = new ArrayList<String>()
  --
  ~prepare(): void
  ~bake(): void
  ~cut(): void
  ~box(): void
  +getName(): String
  +toString(): String
}

abstract class PizzaStore {
  ~createPizza(item: String): Pizza
  +orderPizza(type: String): Pizza
}

class ArgentinaStylePepperoniPizza {
  +ArgentinaStylePepperoniPizza()
  ~cut(): void
}

ChicagoStyleCheesePizza --|> Pizza
DependentPizzaStore ..> Pizza
NYStylePepperoniPizza --|> Pizza
NYPizzaStore --|> PizzaStore
NYPizzaStore ..> Pizza
NYStyleCheesePizza --|> Pizza
ChicagoPizzaStore --|> PizzaStore
ChicagoPizzaStore ..> Pizza
ChicagoStyleVeggiePizza --|> Pizza
ArgentinaStyleCheesePizza --|> Pizza
ArgentinaPizzaStore --|> PizzaStore
ArgentinaPizzaStore ..> Pizza
ArgentinaStyleVeggiePizza --|> Pizza
ArgentinaStyleClamPizza --|> Pizza
ChicagoStylePepperoniPizza --|> Pizza
NYStyleClamPizza --|> Pizza
ChicagoStyleClamPizza --|> Pizza
NYStyleVeggiePizza --|> Pizza
PizzaStore ..> Pizza
ArgentinaStylePepperoniPizza --|> Pizza
@enduml